force-app/main/default/objects/CTRCDDNACCResult__c.object
<CustomObject>
    <fields>
        <fullName>CTRCDDNACCTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR CDD NACC Transaction</label>
        <referenceTo>CTRCDDNACCTransaction__c</referenceTo>
        <relationshipLabel>CTR CDD NACC Result</relationshipLabel>
        <relationshipName>CTR_CDD_NACC_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CTR CDD NACC Result</label>
    <nameField>
        <label>CTRCDDNACCResult Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>